# mppvault

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
programs/mpp-vault/: Cargo.toml  deploy.md
programs/mpp-vault/src/: errors.rs  lib.rs  state.rs
programs/mpp-vault/src/instructions/: add_whitelist.rs  configure_auto_topup.rs  create_sub_account.rs  create_vault.rs  deposit.rs  execute_payment.rs  mod.rs  pause_sub_account.rs  remove_whitelist.rs  resume_sub_account.rs  set_spending_rules.rs  set_time_rules.rs  withdraw.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/catalog/: route.ts
src/app/dashboard/: layout.tsx  page.tsx
src/app/dashboard/accounts/: page.tsx
src/app/dashboard/accounts/[id]/: page.tsx
src/app/dashboard/accounts/new/: page.tsx
src/app/dashboard/guide/: page.tsx
src/app/dashboard/marketplace/: page.tsx
src/app/dashboard/marketplace/[address]/: page.tsx
src/app/dashboard/transactions/: page.tsx
src/app/dashboard/whitelist/: page.tsx
src/app/docs/: page.tsx
src/app/features/: page.tsx
src/app/registry/: page.tsx
src/app/roadmap/: page.tsx
src/components/: Nav.tsx  WalletProvider.tsx
src/components/dashboard/: Sidebar.tsx  StatCard.tsx
src/lib/: accounts.ts  catalog.ts  mock-data.ts  program.ts  registry.ts  sdk.ts  useVault.ts
src/types/: three.d.ts
