[package]
name = "mpp-vault"
version = "0.1.0"
description = "MPP Vault — smart wallet infrastructure for AI agents on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mpp_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
